cmake_minimum_required(VERSION 3.5)
project(ORB_SLAM3)
# list(APPEND CMAKE_PREFIX_PATH
#      "${CMAKE_CURRENT_SOURCE_DIR}/eigen")
IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE Release)
ENDIF()

MESSAGE("Build type: " ${CMAKE_BUILD_TYPE})

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}  -Wall   -O3")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall   -O3")
set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -march=native")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -march=native")
set(CMAKE_CXX_STANDARD 14)
# Check c++14 or C++0x support
include(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++14" COMPILER_SUPPORTS_CXX14)
if(COMPILER_SUPPORTS_CXX14)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
   add_definitions(-DCOMPILEDWITHC14)
   message(STATUS "Using flag -std=c++14.")
else()
   message(FATAL_ERROR "The compiler ${CMAKE_CXX_COMPILER} has no c++14 support. Please use a different C++ compiler.")
endif()

find_package(OpenCV)
   if(NOT OpenCV_FOUND)
      message(FATAL_ERROR "OpenCV > 4.4 not found.")
   endif()

MESSAGE("OPENCV VERSION:")
MESSAGE(${OpenCV_VERSION})
# add_subdirectory(eigen)
# find_package(Eigen3 REQUIRED)
include_directories( "eigen" "include")

# add_executable(test_eigen test_eigen.cpp)
# add_executable(test_opencv test_opencv.cpp)
add_executable(test_orbextractor test_orbextractor.cpp ORBextractor.cpp)
add_executable(camera_orb camera_orb.cpp ORBextractor.cpp)
target_link_libraries(test_orbextractor PRIVATE ${OpenCV_LIBS})
target_link_libraries(camera_orb PRIVATE ${OpenCV_LIBS})
# target_link_libraries(test_eigen PRIVATE Eigen)