cmake_minimum_required(VERSION 3.5)
project(ORB_SLAM3)
# list(APPEND CMAKE_PREFIX_PATH
#      "${CMAKE_CURRENT_SOURCE_DIR}/eigen")
IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE Release)
ENDIF()

MESSAGE("Build type: " ${CMAKE_BUILD_TYPE})

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}  -Wall   -O3")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall   -O3")
set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -march=native")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -march=native")
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
# Check c++14 or C++0x support
# include(CheckCXXCompilerFlag)
# CHECK_CXX_COMPILER_FLAG("-std=c++14" COMPILER_SUPPORTS_CXX14)
# if(COMPILER_SUPPORTS_CXX14)
#    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
#    add_definitions(-DCOMPILEDWITHC14)
#    message(STATUS "Using flag -std=c++14.")
# else()
#    message(FATAL_ERROR "The compiler ${CMAKE_CXX_COMPILER} has no c++14 support. Please use a different C++ compiler.")
# endif()

find_package(OpenCV)
   if(NOT OpenCV_FOUND)
      message(FATAL_ERROR "OpenCV  not found.")
   endif()

MESSAGE("OPENCV VERSION:")
MESSAGE(${OpenCV_VERSION})
# add_subdirectory(eigen)
# find_package(Eigen3 REQUIRED)
find_package(g2o)
MESSAGE("g2o VERSION:")
MESSAGE(${g2o_VERSION})
include_directories( "eigen" "include" "ThirdParty/Sophus")

# add_executable(test_eigen test_eigen.cpp)
# add_executable(test_opencv test_opencv.cpp)
# add_executable(test_orbextractor test_orbextractor.cpp ORBextractor.cpp)
add_executable(camera_orb camera_orb.cpp ORBextractor.cpp)
# add_executable(test_g2o test_g2o.cpp)
# add_executable(test_sophus test_sophus.cpp)
add_executable(test_dbow2 test_dbow2.cpp)
# target_link_libraries(test_orbextractor PRIVATE ${OpenCV_LIBS})
target_link_libraries(camera_orb PRIVATE ${OpenCV_LIBS})
# target_link_libraries(test_g2o PRIVATE g2o::core g2o::stuff)
target_link_libraries(test_dbow2 PRIVATE ${OpenCV_LIBS} ${PROJECT_SOURCE_DIR}/ThirdParty/DBoW2/build/libDBoW2.dylib)
# target_link_libraries(test_eigen PRIVATE Eigen)